# wallman

./: .gitignore  CMakeLists.txt  README.md  config_parse.c  config_parse.h  config_save.c  config_save.h  example_config  main.c  wallman-genmenu  wallman-showmenu  wallybar
